workoutSite/workoutApp/static/styles/styles.css
.navbar-link {

    transition: text-shadow 0.3s ease;
    transition: scale 0.3s ease;

}

.navbar-link:hover {

    text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
    scale: 110%;
}

.grid-container {
    display: grid;
    grid-template-columns: repeat(1fr);
    gap: 16px;
    padding: 20px;
    margin-inline: auto;
    max-width: 50%;
}

.tile {

    width: 100%;
    scale: 100%;
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 16px;
    background-color: #253857;
}

@media (max-width: 600px) {

    .grid-container {
      max-width: 100%;
    }
}

.image-grid {

    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    padding-bottom: 10px;
}

.tile img {

    display: inline-block;
    width: 100%;
    height: auto;
    border-radius: 8px;
}

.home-img {

    border-radius: 20px;
    scale: 33%;

}

